Added jenv and nvm support

--- a/configs/quick.config
+++ b/configs/quick.config
@@ -8,6 +8,10 @@ env:
   yetanotherquick: "another example"
 ssh:
   file: /Users/example/.ssh/id_rsa
+nvm:
+  version: v12.15.0
+jenv:
+  version: openjdk64-11.0.2
 p10k:
   prompt: 
     icon: "🏃"
