Prevent git commands w/o author and setup the powerlevel prompt

--- a/configs/quick.config
+++ b/configs/quick.config
@@ -1,17 +1,9 @@
 git:
   user: 
-    name: Example # bla
-    email: mail@example.com
-env: 
-  quick: example
-  anotherquick: "another-example"
-  yetanotherquick: "another example"
-ssh:
-  file: /Users/example/.ssh/id_rsa
+    name: 
+    email: 
 nvm:
-  version: v12.15.0
-jenv:
-  version: openjdk64-11.0.2
+  version: default
 p10k:
   prompt: 
     icon: "🏃"
